[package]
name = "casper-wasm-testsuite"
version = "0.0.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
publish = false
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/casper-network/casper-wasm"
homepage = "https://github.com/casper-network/casper-wasm"
description = "casper-wasm testsuite"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
wast = "38"
test-generator = "0.3"

[dependencies.casper-wasm]
path = ".."
features = [
	"atomics",
	"simd",
	"sign_ext",
	"bulk",
	"multi_value",
]
